--- a/styles/main.css
+++ b/styles/main.css
@@ -23,7 +23,7 @@ header .container{
     display: flex;
     flex-direction: row;
     align-items:center;
-    justify-content:baseline;
+    justify-content:start;
     color: --laranja;
     font-family: 'Arial Black', Times;
     font-size: auto;
@@ -49,24 +49,30 @@ main .container{
 }
 
 .filme-principal{
-    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%),url(/img/Cleancode.jpg);
-    height: 500px;
+    background: linear-gradient(rgba(0,0,0,.70),rgba(0,0,0,.70)100%),url(../img/Cleancode.jpg);
+    height: 400px;
     background-size: cover;
 }
 
 .titulo{
-    font-size: 30px;
+    font-size: auto;
     margin-top: 20px;
+    font-family:'Arial black';
 }
 .descricao{
-    margin-top: 7%;
+    font-family: 'Arial';
+    font-size: auto;
+    margin-top: 10px;
 }
 
 .logopagina{
     font-family: 'Arial', Times;
     font-size: 50%;
 }
-
+.selecao{
+    margin-left: 180%;
+    align-content: inline;
+}
 .logoname{
     color: var(--preto);
     align-items: center;
